# yogptv2

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  test_ssh.py
jobs/1jlfOGzzmBKj0YahxTR3/: details.json
jobs/4FA75Fg1MBn5N0yvlUTd/: details.json
jobs/4Ym915NPRbXnlHvrcYIe/: details.json
jobs/61sjNdyUypcH99hUFZ2V/: details.json
jobs/78YsO5ft8ytdqdTN5LZ6/: details.json
jobs/BipvkeSL2jqVqNbnTCwJ/: details.json
jobs/EbVm8PEW0U3KHaBoY70r/: details.json
jobs/I2qikTeFyatfu78rtBlf/: details.json
jobs/LGnhUsk5Iclxp7tVudie/: details.json
jobs/MjhcI7lElFSiqTh7lbd4/: details.json
jobs/ParAMxazBnRTt9UcQwnj/: details.json
jobs/TFytJeQVgrAyEMdacWKe/: details.json
jobs/fzHuegpeoXN50vVwCUqc/: details.json
jobs/gyKCtur7tBB3GaJXPFI4/: details.json
jobs/hLOCsBPKf5QNxKdaILB5/: details.json
jobs/hi4OCY9aHk97xCsDezwV/: details.json
jobs/huCdDrGaA0ID4bMH8Znf/: details.json
jobs/nyEacAU96y5VjDuZEGC6/: details.json
jobs/rAtsQphYSWmK8r0YzKLH/: details.json
jobs/sktdpgMoCUU9m1K4NXcR/: details.json
jobs/v0L15V5WAZSCnzd6otEt/: details.json
jobs/zROD1Ri0hEtIlCEaRtxt/: details.json
validator_program/: run_validator.py  validator.py
yogpt_subnet/: cli.py
yogpt_subnet/base/: __init__.py  config.py  utils.py
yogpt_subnet/miner/: .env  __init__.py  _config.py  model.py  trainer.py
yogpt_subnet/miner/auth/: auth.py  (+1 more)
yogpt_subnet/utils/: HFManager.py  helpers.py  wandb_initializer.py
yogpt_subnet/validator/: .env  __init__.py  _config.py  jarvis_access.json  model.py  sample_validator.py  utils.py  validator_ copy.py  validator_.py
(+33 files in other folders)
