[tool.poetry]
name = "yourowngpt"
version = "0.1.0"
description = "finetune llms"
authors = ["Tobius <tobiusaolo21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
communex = "^0.1.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
