[tool.poetry]
name = "yogpt-subnet"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "yogpt_subnet" }]
[tool.poetry.dependencies]
python = "^3.10"
communex = "^0.1.32"
transformers = "^4.42.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
